# zova

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  deploy.sh
.sisyphus/: boulder.json
.sisyphus/evidence/: final-storage.db  final-storage.db-shm  final-storage.db-wal  task-1-id-invalid.txt  task-1-id-roundtrip.txt  task-2-fk-violation.txt  task-2-schema-init.txt  task-2.db-shm  task-2.db-wal  task-3-prep-noop.txt  task-4-cross-session.txt  task-4-history-branch.txt  task-4-session-crud.txt  task-4.db-shm  task-4.db-wal  task-5-agent-event.txt  task-5-media-blob-guard.txt  task-5-media-roundtrip.txt  task-5.db-shm  task-5.db-wal  task-6-idempotent.txt  task-6-migrate-fixture.txt  task-6-migrate-malformed.txt  task-6.db-shm  task-6.db-wal  task-7-all.json  task-7-check-clippy.txt
.sisyphus/notepads/chat-storage-sqlite-trait-schema/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/chatgpui-rig-chat-ui-mvp/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/storage-ui-split/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: chat-storage-sqlite-trait-schema.md  chatgpui-rig-chat-ui-mvp.md
crates/chat-app/: Cargo.toml
crates/chat-app/src/: app.rs  lib.rs  main.rs  model_selector.rs
crates/chat-app/src/chat/: events.rs  message.rs  message_list.rs  mod.rs  scroll_manager.rs  sidebar.rs  view.rs
crates/chat-app/src/database/: conversation.rs
crates/chat-app/src/llm/: mod.rs  provider.rs  rig_adapter.rs
crates/chat-app/src/settings/: mod.rs  state.rs  view.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  pipeline.rs  tree.rs
crates/layout/: Cargo.toml  build.rs
crates/layout/src/: lib.rs  types.rs
crates/layout/src/model/: mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  model.rs  provider.rs  rig_adapter.rs
crates/pdf/: Cargo.toml
crates/pdf/examples/: extract_chars.rs
crates/pdf/src/: lib.rs  render.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 202602120001_init_chat_storage.sql
crates/storage/src/: error.rs  ids.rs  lib.rs  types.rs
crates/storage/src/sqlite/: mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  main.rs  model_selector.rs
crates/ui/src/chat/: events.rs  message_input.rs  sidebar.rs  view.rs
crates/ui/src/database/: mod.rs
crates/ui/src/llm/: provider.rs
crates/ui/src/settings/: mod.rs  state.rs  view.rs
crates/ui/src/settings/view/: provider.rs  theme.rs
crates/wasm/: Cargo.toml  build.rs
crates/wasm/src/: lib.rs
web/: app.js  index.html  serve.sh
