[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Match burn-onnx requirements
burn = { git = "https://github.com/tracel-ai/burn", default-features = false }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", default-features = false }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false }

serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
log = { version = "0.4", default-features = false }
getrandom = { version = "^0.3", default-features = false, features = [
    "wasm_js",
] }
