[workspace]
members = ["crates/*"]

# Keep dependency resolution consistent across members.
resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = [
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "8671be20052e30a92ad555bbe384eabb32446549" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "8671be20052e30a92ad555bbe384eabb32446549" }
gpui-tokio-bridge = "0.1.0"
core-text = "=21.0.0"
rig-core = "0.30"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
snafu = "0.8"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }
