[workspace]
members = ["crates/*"]

# Keep dependency resolution consistent across members.
resolver = "2"

[workspace.dependencies]
arc-swap = "1"
core-text = "=21.0.0"
dirs = "6"
figment = { version = "0.10", features = ["json"] }
futures = "0.3"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
gpui-tokio-bridge = "0.1.0"
rig-core = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
snafu = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7"] }
