[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
pdf = { path = "../pdf" }
layout = { path = "../layout" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
burn = { version = "0.16", default-features = false, features = ["std", "ndarray"] }
image = "0.25"
hayro-interpret = "0.5"