[package]
name = "layout"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "ndarray"] }
burn-store = { git = "https://github.com/tracel-ai/burn.git", features = ["std", "burnpack"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
burn-onnx = { git = "https://github.com/tracel-ai/burn-onnx.git" }