[package]
name = "layout"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
burn = { workspace = true, features = ["ndarray", "wgpu"] }
burn-store = { workspace = true, features = ["std", "burnpack"] }

image = "0.25"
serde = { version = "1", features = ["derive"] }

# Wasm dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
wasm-logger = "0.2"
web-time = "1.1.0"
js-sys = "0.3"
getrandom = { workspace = true }

[build-dependencies]
burn-onnx = { git = "https://github.com/tracel-ai/burn-onnx.git", branch = "main", default-features = false }