[package]
edition = "2024"
name = "ui"
publish = false
version = "0.1.0"

[dependencies]
arc-swap.workspace = true
dirs.workspace = true
figment.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
gpui-tokio-bridge.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zova-llm = { path = "../llm" }
zova-storage = { path = "../storage" }

[target.'cfg(target_os = "macos")'.dependencies]
core-text.workspace = true
