[package]
name = "zova-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["ndarray", "webgpu"] }
burn-store = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "burnpack"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-time = "1.1"
js-sys = "0.3"
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }
console_error_panic_hook = "0.1"
log = "0.4"

[build-dependencies]
burn-onnx = { git = "https://github.com/tracel-ai/burn-onnx.git", default-features = false }