[package]
name = "zova-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
js-sys = "0.3"
web-sys = "0.3"