[package]
name = "zova-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use burn 0.16
burn = { workspace = true, default-features = false, features = ["ndarray"] }

serde = { workspace = true }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
log = { workspace = true }
console_error_panic_hook = "0.1"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-time = "1.1"
js-sys = "0.3"
getrandom = { workspace = true }

[build-dependencies]
burn-import = { version = "0.16", default-features = false }